# kursa4

./: .gitignore  CMakeLists.txt  Edge.cpp  Point.cpp  Point3D.hpp  Zone.hpp  adf.hpp  edge.hpp  hash.hpp  hull.hpp  incremental.cpp  incremental.hpp  main.cpp  point.hpp  triangle.cpp  triangle.hpp  triangulation3D.cpp  triangulation3D.hpp  utils.hpp  vis2.py  vis3.py
